--- a/kernel/priceChecker/templates/priceChecker/index.html
+++ b/kernel/priceChecker/templates/priceChecker/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>My Django App</title>
+    <title>Price Checker</title>
     {% load static %}
     <link
       rel="stylesheet"
@@ -59,24 +59,31 @@
       products
     </header>
     <div class="base-container">
-      <h2>Choose Product</h2>
-      <form method="post">
-        <input
-          type="text"
-          placeholder="Which product do you looking for?"
-          name="url"
-        /><br />
-        Select Category:
-        <select name="data_type">
-          <option value="all">All Categories</option>
-          <option value="it-electronics">IT &amp; Electronics</option>
-          <option value="rtv-agd">RTV/AGD</option>
-          <option value="sports">Sports</option>
-          <option value="house-garden">House &amp; Garden</option>
-        </select>
-        <br />
-        <input type="submit" value="Search for offers" />
-      </form>
+      <div class="wrapper input-wrapper">
+        <form method="post">
+          Choose Product
+          <input
+            type="text"
+            placeholder="Which product do you looking for?"
+            name="url"
+          /><br />
+          <input type="submit" value="Search for offers" />
+        </form>
+      </div>
+      <div class="wrapper db-wrapper">
+        <form method="post">
+          Look for already checked offers
+          <select class="category" name="data_type">
+            <option value="all">All Categories</option>
+            <option value="it-electronics">IT &amp; Electronics</option>
+            <option value="rtv-agd">RTV/AGD</option>
+            <option value="sports">Sports</option>
+            <option value="house-garden">House &amp; Garden</option>
+          </select>
+          <br />
+          <input class="db-search-btn" type="submit" value="Show me!" />
+        </form>
+      </div>
     </div>
   </body>
   <script>
