--- a/kernel/priceChecker/templates/priceChecker/viewAll.html
+++ b/kernel/priceChecker/templates/priceChecker/viewAll.html
@@ -40,34 +40,24 @@
   </table>
 </div>
 <script>
-    function sortTable(order) {
-        var table, rows, switching, i, x, y, shouldSwitch;
-        table = document.querySelector(".product-table");
-        switching = true;
-      
-        while (switching) {
-          switching = false;
-          rows = table.rows;
-      
-          for (i = 1; i < (rows.length - 1); i++) {
-            shouldSwitch = false;
-            x = rows[i].getElementsByTagName("TD")[4];
-            y = rows[i + 1].getElementsByTagName("TD")[4];
-      
-            if (order === 'asc' && new Date(x.innerHTML) > new Date(y.innerHTML)) {
-              shouldSwitch = true;
-              break;
-            } else if (order === 'desc' && new Date(x.innerHTML) < new Date(y.innerHTML)) {
-              shouldSwitch = true;
-              break;
-            }
-          }
-          if (shouldSwitch) {
-            rows[i].parentNode.insertBefore(rows[i + 1], rows[i]);
-            switching = true;
-          }
+  function sortTable(order) {
+    var table, rows, switching, i, x, y, shouldSwitch;
+    table = document.querySelector(".product-table");
+    rows = Array.from(table.rows);
+
+    rows.slice(1, rows.length - 1).sort(function(a, b) {
+        x = new Date(a.getElementsByTagName("TD")[4].innerHTML);
+        y = new Date(b.getElementsByTagName("TD")[4].innerHTML);
+
+        if (order === 'asc') {
+            return x - y;
+        } else {
+            return y - x;
         }
-      }
+    }).forEach(function(row) {
+        table.tBodies[0].appendChild(row);
+    });
+}
       
     document.getElementById('shopSelect').addEventListener('change', function() {
         document.getElementById('shopForm').submit();
